[+] ownport/eventsflow-dev:0.1.2-ubuntu & release

--- a/.drone.yml
+++ b/.drone.yml
@@ -1,7 +1,7 @@
 pipeline:
 
   test:
-    image: ownport/eventsflow-dev:0.1.1-ubuntu  
+    image: ownport/eventsflow-dev:0.1.2-ubuntu  
     commands:
     - make pre-cleanup
     - pip3 install -e .
@@ -15,3 +15,17 @@ pipeline:
     when:
       event: 
       - test
+      # - release
+  
+  release:
+    image: ownport/eventsflow-dev:0.1.2-ubuntu  
+    commands:
+    - make pre-cleanup
+    - bumpversion part --tag
+    - twine upload dist/*
+    # - bumpversion --serialize {major}.{minor}.{patch}.dev0 patch
+    - make post-clean
+    when:
+      event: 
+      - release
+
