--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,5 @@
+
+sudo: false
 language: python
 python:
 - '3.5'
@@ -7,4 +9,5 @@ install:
 - pip3 install -e .
 
 # --cov=eventsflow -p no:cacheprovider --cov-report=term-missing --cov-config=.coveragerc
-script: pytest 
+script: 
+- pytest 
