--- a/.devcontainer.json
+++ b/.devcontainer.json
@@ -16,17 +16,18 @@
       "python.linting.mypyPath": "/usr/local/py-utils/bin/mypy",
       "python.linting.pycodestylePath": "/usr/local/py-utils/bin/pycodestyle",
       "python.linting.pydocstylePath": "/usr/local/py-utils/bin/pydocstyle",
-      "python.linting.pylintPath": "/usr/local/py-utils/bin/pylint"
+      "python.linting.pylintPath": "/usr/local/bin/pylint"
   	},
 
     // Add the IDs of extensions you want installed when the container is created.
     "extensions": [
-      "ms-python.python"
-    ]
+      "ms-python.python",
+      "ms-python.vscode-pylance"
+    ],
 
     // Use 'postCreateCommand' to run commands after the container is created.
   	// "postCreateCommand": "pip3 install --user -r requirements.txt",
 
     // Comment out connect as root instead. More info: https://aka.ms/vscode-remote/containers/non-root.
-    // "remoteUser": "vscode"
+    "remoteUser": "vscode"
 }
