--- a/.devcontainer.json
+++ b/.devcontainer.json
@@ -5,18 +5,24 @@
     // Set *default* container specific settings.json values on container create.
 	  "settings": { 
       "terminal.integrated.shell.linux": "/bin/bash",
-      "python.pythonPath": "/usr/local/bin/python",
+      // Python
+      "python.pythonPath": "/usr/bin/python",
+      // Python Linting
       "python.linting.enabled": true,
       "python.linting.pylintEnabled": true,
-      "python.formatting.autopep8Path": "/usr/local/py-utils/bin/autopep8",
-      "python.formatting.blackPath": "/usr/local/py-utils/bin/black",
-      "python.formatting.yapfPath": "/usr/local/py-utils/bin/yapf",
-      "python.linting.banditPath": "/usr/local/py-utils/bin/bandit",
-      "python.linting.flake8Path": "/usr/local/py-utils/bin/flake8",
-      "python.linting.mypyPath": "/usr/local/py-utils/bin/mypy",
-      "python.linting.pycodestylePath": "/usr/local/py-utils/bin/pycodestyle",
-      "python.linting.pydocstylePath": "/usr/local/py-utils/bin/pydocstyle",
-      "python.linting.pylintPath": "/usr/local/bin/pylint"
+      "python.linting.pylintPath": "/usr/local/bin/pylint",
+      // Python Testing
+      "python.testing.unittestEnabled": false,
+      "python.testing.nosetestsEnabled": false,
+      "python.testing.pytestEnabled": false,
+      // "python.formatting.autopep8Path": "/usr/local/py-utils/bin/autopep8",
+      // "python.formatting.blackPath": "/usr/local/py-utils/bin/black",
+      // "python.formatting.yapfPath": "/usr/local/py-utils/bin/yapf",
+      // "python.linting.banditPath": "/usr/local/py-utils/bin/bandit",
+      // "python.linting.flake8Path": "/usr/local/py-utils/bin/flake8",
+      // "python.linting.mypyPath": "/usr/local/py-utils/bin/mypy",
+      // "python.linting.pycodestylePath": "/usr/local/py-utils/bin/pycodestyle",
+      // "python.linting.pydocstylePath": "/usr/local/py-utils/bin/pydocstyle",
   	},
 
     // Add the IDs of extensions you want installed when the container is created.
