--- a/.devcontainer.json
+++ b/.devcontainer.json
@@ -1,7 +1,10 @@
 {
-    "name": "Eventflow Dev VSCode docker container",
+    "name": "Eventflow",
     "image": "registry.gitlab.com/eventsflow/docker/dev-vscode:latest",
- 
+    "containerEnv": {
+      "PYTHONPATH": "/workspaces/core"
+    },
+
     // Set *default* container specific settings.json values on container create.
 	  "settings": { 
       "terminal.integrated.shell.linux": "/bin/bash",
@@ -14,7 +17,8 @@
       // Python Testing
       "python.testing.unittestEnabled": false,
       "python.testing.nosetestsEnabled": false,
-      "python.testing.pytestEnabled": false,
+      "python.testing.pytestEnabled": false
+      
       // "python.formatting.autopep8Path": "/usr/local/py-utils/bin/autopep8",
       // "python.formatting.blackPath": "/usr/local/py-utils/bin/black",
       // "python.formatting.yapfPath": "/usr/local/py-utils/bin/yapf",
