--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,6 +6,17 @@ stages:
 - test
 - release
 
+build_eventflow:
+  stage: build
+  script:
+  - python3 setup.py sdist bdist_wheel
+  - TWINE_PASSWORD=${CI_JOB_TOKEN} \
+    TWINE_USERNAME=gitlab-ci-token \
+    python3 -m twine upload \
+      --repository-url https://gitlab.example.com/api/v4/projects/${CI_PROJECT_ID}/packages/pypi \
+      dist/*
+
+
 test_eventflow:
   stage: test
   script:
