--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,5 +21,5 @@ build_eventflow:
   - >
     TWINE_PASSWORD=${CI_JOB_TOKEN} TWINE_USERNAME=gitlab-ci-token 
     python3 -m twine upload 
-    --repository-url https://gitlab.example.com/api/v4/projects/${CI_PROJECT_ID}/packages/pypi
+    --repository-url https://gitlab.com/api/v4/projects/${CI_PROJECT_ID}/packages/pypi
     dist/*
