--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,7 +15,7 @@ test_eventflow:
     reports:
       junit: report.xml
 
-release_eventflow
+release_eventflow:
   stage: release
   script:
   - echo "[WARNING] Not implemented yet"
