--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,32 @@
+[metadata]
+name = eventsflow-core
+version = 0.1.24.dev0
+description = Events Flow Core components
+url = https://gitlab.com/eventsflow/core
+author = ownport
+author_email=ownport@gmail.com
+license = MIT
+
+[options]
+packages = find_namespace:
+install_requires=
+	jinja2==2.11.2
+    pyyaml==5.3.1
+python_requires = 
+	>=3.8
+classifiers = 
+    Programming Language :: Python :: 3.8
+    Programming Language :: Python :: Implementation :: CPython
+    License :: OSI Approved :: MIT License
+    Operating System :: Unix
+
+[options.entry_points]
+console_scripts =
+	eventsflow = eventsflow.cli:launch_new_instance
+
+[options.packages.find]
+exclude=tests*
+
 [bumpversion]
 current_version = 0.1.24.dev0
 commit = False
