--- a/setup.cfg
+++ b/setup.cfg
@@ -1,54 +1,43 @@
 [metadata]
 name = eventsflow-core
-version = 0.1.24.dev0
 description = Events Flow Core components
 url = https://gitlab.com/eventsflow/core
 author = ownport
 author_email=ownport@gmail.com
-license = MIT
-
-[options]
-packages = find_namespace:
-install_requires=
-	jinja2==2.11.2
-    pyyaml==5.3.1
-python_requires = 
-	>=3.8
+license = MIT License
+license_file = LICENSE
 classifiers = 
+    Intended Audience :: Developers
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: Implementation :: CPython
     License :: OSI Approved :: MIT License
     Operating System :: Unix
+keywords = 
+    eventsflow
+    pipeline
+    dataflow
+
+[options]
+packages = find_namespace:
+install_requires=
+    jinja2 == 2.11.2
+    pyyaml == 5.3.1
+python_requires = 
+    >=3.8
+zip_safe = True
+
+# [options.extras_require]
+# test = 
+#     pytest 
+#     pytest-cov
+#     pytest-pep8
 
 [options.entry_points]
 console_scripts =
-	eventsflow = eventsflow.cli:launch_new_instance
+    eventsflow = eventsflow.cli:launch_new_instance
 
 [options.packages.find]
 exclude=tests*
 
-[bumpversion]
-current_version = 0.1.24.dev0
-commit = False
-tag = False
-parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(\.(?P<release>[a-z]+)(?P<build>\d+))?
-serialize = 
-	{major}.{minor}.{patch}.{release}{build}
-	{major}.{minor}.{patch}
-
-[bumpversion:part:release]
-optional_value = prod
-first_value = dev
-values = 
-	dev
-	prod
-
-[bumpversion:part:build]
-
-[bumpversion:file:setup.py]
-
-[bumpversion:file:eventsflow/cli.py]
-
-[tool:pytest]
-junit_family=xunit2
-
+# [tool.pytest]
+# junit_family=xunit2
