ci: fixed #9, build process uses pyproject.toml approach instead of setup.py

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,7 +18,7 @@ test_eventflow:
 build_eventflow:
   stage: build
   script:
-  - python3 setup.py sdist bdist_wheel
+  - python3 -m build
   artifacts:
     paths:
     - dist/*.whl
